--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,179 @@
     margin: 0;
     padding: 0;
 }
+
+nav{
+    background-color: #3ebbe5;
+    height: 80px;
+}
+
+.nav-menu{
+    max-width: 980px;
+    width: 100%;
+    height: 40px;
+    margin: auto;
+}
+
+.item-nav{
+    background-color: #daa520;
+    border: 2px dashed black;
+    float: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 8px;
+}
+
+.left{
+    width: 100px;
+}
+
+.center{
+    width: calc(100% - 200px);
+    text-align: center;
+}
+
+.right{
+    width: 100px;
+    float: right;
+    text-align: end;
+}
+
+.nav-content{
+    background-color: blue;
+    height: 420px;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.nav-text{
+    background-color: #ee82ee;
+    border: 2px dashed black;
+    height: 100%;
+    width: 750px;
+    margin: auto;
+}
+
+.container-flex{
+    max-width: 980px;
+    width: 100%;
+    height: 500px;
+    margin: auto;
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.flex-item-lightblue{
+    background-color: #1e90ff;
+    border: 2px dashed black;
+    flex-grow: 1.5;
+}
+
+.flex-item-pink{
+    background-color: #ffc0cb;
+    border: 2px dashed black;
+    flex-grow: 1;
+}
+
+.main-center{
+    background-color: #d3d3d3;
+}
+
+.container-flex-center{
+    max-width: 980px;
+    width: 100%;
+    height: 500px;
+    margin: auto;
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.flex-item-lightblue-center{
+    background-color: #1e90ff;
+    border: 2px dashed black;
+    flex-grow: 1;
+}
+
+.flex-item-pink-center{
+    background-color: #ffc0cb;
+    border: 2px dashed black;
+    flex-grow: 1.5;
+}
+
+.main-end{
+    background-color: #d3d3d3;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.container-main-end{
+    max-width: 980px;
+    width: 100%;
+    height: 750px;
+    margin: auto;
+    border: 2px dashed black;
+    background-color: green;
+}
+
+footer{
+    background-color: black;
+}
+
+.footer-top{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.footer-top{
+    max-width: 980px;
+    width: 100%;
+    height: 500px;
+    margin: auto;
+    display: flex;
+}
+
+.flex-item-fucsia{
+    background-color: #f08080;
+    border: 2px dashed black;
+    flex-grow: 2;
+}
+
+.flex-item-aqua{
+    background-color: #20b2aa;
+    border: 2px dashed black;
+    flex-grow: 1;
+}
+
+.container-footer-bottom{
+    background-color: black;
+    height: 80px;
+    padding-top: 15px;
+}
+
+.footer-bottom{
+    background-color: #7fffd4;
+    max-width: 980px;
+    width: 100%;
+    height: 60px;
+    margin: auto;
+}
+
+.item-footer{
+    background-color: #ffb6c1;
+    border: 2px dashed black;
+    margin-top: 15px;
+    padding: 8px;
+    width: 72px;
+}
+
+.left.item-footer{
+    float: left;
+    text-align: center;
+}
+
+.right.item-footer{
+    float: right;
+    
+}
